--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,9 @@ body {
   color:gray;
 }
 
-
-
-
+footer{
+  padding-top: 2em;
+  background-color:#060022;
+  color:gray;
+  padding-bottom:2em;
+}
